<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cat Chat</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="account_email_hint">Email Address</string>
    <string name="account_password_hint">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="add">Add</string>
    <string name="messages">Messages</string>
    <string name="title_activity_cat_image_picker">Cat Picker</string>
    <string name="logout">Logout</string>
    <string name="send">Send</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logging_in">Logging in...</string>
    <string name="signing_up">Signing up...</string>
    <string name="send_to">Send to</string>
    <string name="title_activity_facebook_friend_picker">Facebook Friend</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_reset_email_sent">Password reset email successfully sent</string>
    <string name="please_verify_email">Verify your email address</string>
    <string name="please_verify_email_message">You will not be able to send/receive messages on CatChat without verifying your email address.</string>
    <string name="failed_to_send_email_verification">Failed to resend email verification. </string>
    <string name="email_verification_sent">Email verification email sent.</string>
    <string name="no_messages">No messages!</string>
    <string name="tap_plus_to_send_message">Tap on the + at the top right of your screen to send a message and get the ball rolling.</string>
    <string name="fb_msg_name">Come join me on CatChat</string>
    <string name="fb_msg_caption">Send messages via the medium of cute cats!</string>
    <string name="fb_msg_description">Create and share messages via the medium of cats!</string>
    <string name="invite">Invite FB Friends</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_email_of_someone_youd_like_to_message">Please enter the email address of the person to message</string>
    <string name="enter_email">Enter Email</string>
    <string name="invalid_email_addess">Invalid email address</string>
    <string name="retrieving_cat_pics">Retrieving Cat Pictures...</string>
    <string name="sent_messages">Sent Messages</string>
    <string name="resend_verification_email">Resend verification email</string>

</resources>
