<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.catchat.app.ui.auth.LoginActivity">

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:text="@string/app_name"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/signup"
        android:text="@string/sign_up"
        android:background="@drawable/orange_button_selector"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/login"
        android:text="@string/log_in"
        android:background="@drawable/darkorange_button_selector"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/facebook"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/facebook_blue"
        android:textColor="@android:color/white"
        android:text="@string/log_in_with_facebook"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

</LinearLayout>