<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.catchat.app.LoginActivity"
    android:background="@color/turquoise">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/catchat_large"/>

    <TextView
        android:id="@+id/appname"
        android:textSize="28sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/app_name"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/signup"
        android:layout_below="@id/appname"
        android:text="@string/sign_up"
        android:background="@color/orange"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/login"
        android:text="@string/log_in"
        android:layout_below="@id/signup"
        android:background="@color/dark_orange"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/facebook"
        android:background="@color/facebook_blue"
        android:textColor="@android:color/white"
        android:layout_below="@id/login"
        android:text="@string/facebook"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

</RelativeLayout>
