<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top">

    <com.catchat.app.ui.FloatLabelLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:floatLabelTextAppearance="@style/AppTheme.FloatLabel.Orange">

        <EditText
            android:id="@+id/email"
            android:textColorHint="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_email_hint"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/edit_password" />

    </com.catchat.app.ui.FloatLabelLayout>

    <com.catchat.app.ui.FloatLabelLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:floatLabelTextAppearance="@style/AppTheme.FloatLabel.Orange">

        <EditText
            android:id="@+id/password"
            android:textColorHint="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_password_hint"
            android:singleLine="true"
            android:inputType="textPassword"
            android:imeOptions="actionDone" />

    </com.catchat.app.ui.FloatLabelLayout>

    <Button
        android:id="@+id/signup"
        android:layout_below="@id/password"
        android:text="@string/sign_up"
        android:background="@drawable/orange_button_selector"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="50dp"/>

</LinearLayout>