<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:scrollbarStyle="outsideOverlay"
        android:visibility="gone"
        tools:context="com.catchat.app.ui.InboxActivity"/>

    <LinearLayout
        android:id="@+id/empty_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/empty_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_messages"
            android:textColor="@color/turquoise"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/empty_content"
            android:maxWidth="210dp"
            android:gravity="center"
            android:textColor="@color/turquoise"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/tap_plus_to_send_message"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/resend_verification_email"
            android:text="@string/resend_verification_email"/>
    </LinearLayout>

</RelativeLayout>
